PZ-269 | Modularise PearlZip boot up process to make modifications easier
+ Converted AddToArchiveTestFX to new test format
+ Added some test framework BDD clauses
+ Updated naming

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>